users service converted to grpc
